Changed styling to emotion; updated resume; fixed katex blurry from sticky sidebar:

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -56,6 +56,10 @@ body {
   font-size: 1.2em;
 }
 
+.katex .base {
+  position: static; /* Stop katex from being blurry */
+}
+
 /* #root {
   position: relative;
   min-height: 100vh;
